fix(core): icon and grid optimizations - remove icon animation events for Angular 12/zonejs performance - cache scroll container query for grid scroll hook - fix broken css selector for grid cell background

--- a/projects/elements/src/icon/icon.css
+++ b/projects/elements/src/icon/icon.css
@@ -3,6 +3,9 @@
   --width: var(--nve-ref-size-400);
   --height: var(--nve-ref-size-400);
   display: inline-flex;
+  contain: layout;
+  content-visibility: auto;
+  contain-intrinsic-size: var(--width) var(--height);
 }
 
 [internal-host] {
@@ -12,7 +15,6 @@
   place-self: center;
   display: flex;
   place-items: center;
-  
 }
 
 svg {
